<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".activities.AnimateActivity">

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_back" />

    <Button
        android:id="@+id/btn_viewFromTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/btn_fromTop" />

    <Button
        android:id="@+id/btn_viewFromBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_viewFromTop"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_fromBottom" />

    <Button
        android:id="@+id/btn_viewFromRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_viewFromBottom"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_fromRight" />

    <Button
        android:id="@+id/btn_viewFromLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_viewFromRight"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_fromLeft" />


</RelativeLayout>